# Backup-Slackbuilds

./: .gitignore  .pyproject.toml.un~  README.md  backup_db.py  config.ini  config.ini.sample  config.py  file_monitor.py  main.py  monitor.py  oopFileMonitor.py  pyproject.toml  rc.cached_file_monitor  setup.py
backup_app/: backup_db.py
backup_app/backup_app/: setup.py
oopRefactor/: config.py  extensions.py  file_monitor.py  main.py
oopRefactor/tests/: test_file_monitor.py  test_with_changes.py
standalone/: config.py
system_service/: backup_db.py  config.py  file_monitor.py  file_type_presets.conf  main.py
