[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
backend-path = ["."]

[project]
name = "backup-tmp-file-monitor"
version = "0.1.0"
description = "A Python application to monitor directories and back up new or changed files."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.md"}

authors = [
  {name = "Andrew Dennis", email = "madennis385@gmail.com"},
]

keywords = ["backup", "file monitor", "automation", "python", "local backup"]
dependencies = [
  "questionary>=2.0.0,<3.0.0"
]
[project.urls]
Homepage = "https://github.com/madennis385/Backup-Slackbuilds"
Repository = "https://github.com/madennis385/Backup-Slackbuilds"

[project.scripts]
backup-tool = "backup_app.main:main"
